--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 
+#server.port=1231
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.username = postgres
+#spring.datasource.password = root
+#spring.jpa.hibernate.ddl-auto = update
+#spring.datasource.url = jdbc:postgresql://localhost:5432/security_app_db
+#spring.jpa.show-sql = true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/security_app_db
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.show_sql=true 
