--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-#server.port=1231
+server.port=1231
 #spring.datasource.driverClassName=org.postgresql.Driver
 #spring.datasource.username = postgres
 #spring.datasource.password = root
@@ -12,6 +12,6 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/security_app_db
 spring.datasource.username=postgres
 spring.datasource.password=root
-
+#spring.freemarker.expose-request-attributes=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true 
